add federick ozanam avatar

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
 						<p>SOCIETY of ST VINCENT De PAUL was founded in 1833 by Blessed Federick Ozanam, a young
 							law student together with six students to help the less fortunate in Paris.</p>
 					</header>
-					<p>It began as the Conference of Charity which was financed by the individuals providing for the sick and the
+					<p><span class="image avatar left"><img src="images/ozanam.jpg" style="width:250px;height:250px;" /></span>It
+						began as the Conference of
+						Charity
+						which was financed by the individuals providing for the sick and the
 						poor. The Society also collaborated with the Daughters of Charity in providing
-						for their needs.</p>
-					<p>The Society was later than placed under the patronage of St Vincent De Paul, 16th century patron saint of
+						for their needs. The Society was later than placed under the patronage of St Vincent De Paul, 16th century
+						patron saint of
 						charity. As VINCENTIANs from the Conference of the Church of the Assumption we help those in need or living
 						in poverty. We do not just help to provide for their needs but we also listen to them and journey with the
 						families as sometimes all they need is a friend to listen and to care.</p>
