--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<p>SOCIETY of ST VINCENT De PAUL was founded in 1833 by Blessed Federick Ozanam, a young
 							law student together with six students to help the less fortunate in Paris.</p>
 					</header>
-					<p><span class="image avatar left"><img src="images/ozanam.jpg" style="width:250px;height:250px;" /></span>It
+					<p><span class="image avatar left"><img src="images/ozanam.jpg" /></span>It
 						began as the Conference of
 						Charity
 						which was financed by the individuals providing for the sick and the
