add bank and mission & vision statements

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		<header>
 			<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 			<h1 id="logo"><a href="#">SSVP St Joseph</a></h1>
-			<p>Your embrace renews the world<br /></p>
 		</header>
 		<nav id="nav">
 			<ul>
 				<li><a href="#one" class="active">About</a></li>
+				<li><a href="#seven">Vision & Mission</a></li>
 				<li><a href="#two">Board Members</a></li>
 				<li><a href="#three">Activities</a></li>
 				<li><a href="#four">Contact</a></li>
@@ -70,6 +70,24 @@
 				</div>
 			</section>
 
+			<!-- Seven -->
+			<section id="seven">
+				<div class="container">
+					<h3>Vision Statement</h3>
+					<p>As a Catholic lay organisation, we aim to embrace the world in a network of charity, serving Christ in the
+						suffering, poor and marginalised, bringing them love and respect, aid and development, hope and joy, towards
+						a more just society. We also seek to deepen our spirituality and the mutual love and support among members
+						of the Vincentian family, so that seeing how we serve those in need, people are attracted to the Society and
+						to Christ, whose teachings and directions motivate us.</p>
+					<h3>Mission Statement</h3>
+					<p>Our mission, inspired by the Radiant Flame of Christ’s Love for all of humanity, is to grow spiritually
+						through seeking and finding individuals and families who are forgotten, suffering or deprived and through
+						personal contact, to offer practical help to anyone in need without distinction of ethnicity, religion,
+						colour or political persuasion. We share their burden and joys sowing seeds of hope, encouraging
+						self-sufficiency and respecting their values and beliefs. </p>
+				</div>
+			</section>
+
 			<!-- Two -->
 			<section id="two">
 				<div class="container">
@@ -92,11 +110,11 @@
 					<p>Building our community</p>
 					<div class="features">
 						<article>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="images/ozanam_home.jpg" alt="" /></a>
 							<div class="inner">
-								<h4>Meetings</h4>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer
-									adipiscing ornare amet.</p>
+								<h4>Education</h4>
+								<p>We are providing free English and Computer classes during the weekends to children from poor and
+									migrant families at our Center</p>
 							</div>
 						</article>
 						<article>
@@ -110,7 +128,7 @@
 						<article>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 							<div class="inner">
-								<h4>Education</h4>
+								<h4>Meetings</h4>
 								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer
 									adipiscing ornare amet.</p>
 							</div>
@@ -148,8 +166,9 @@
 			<section id="six">
 				<div class="container">
 					<h3>Donate</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
-						Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+					<p><span class="image left"><img src="images/bank.png" /></span>Kindly forward all contributions to SOCIETY OF
+						ST VINCENT DE PAUL under the account number of <strong>Public Bank Account No. 3089 5813 34</strong></p>
+					<p>The society is able to provide tax exemption receipts for our donors upon request.</p>
 				</div>
 			</section>
 
