--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
 						charity. As VINCENTIANs from the Conference of the Church of the Assumption we help those in need or living
 						in poverty. We do not just help to provide for their needs but we also listen to them and journey with the
 						families as sometimes all they need is a friend to listen and to care.</p>
+
+					<p>In Malaysia, the National Society of St. Vincent de Paul has been established to serve Christ through
+						embracing the needs of the poor and suffering. The very first conference of the SSVP in Malaysia was
+						established in 1934 in the church of the Assumption in Penang. Throughout the 1950s, other parishes
+						established their conferences. Today the society is firmly rooted in Sabah, Sarawak and in the various
+						states of the Peninsular. </p>
+
+					<p>The Conference of St. Joseph (Sentul) specifically operates from Sentul, a central and urban location where
+						many families are living below the poverty line and struggling with the high cost of city dwelling. Even as
+						we continue our works of supporting poor families though food rations, we have decided that addition to
+						‘giving a fish a day, we would also like to teach them how to fish’.</p>
 				</div>
 			</section>
 
